@startuml Smart Ordering System - Class Diagram

class Customer {
    + browseMenu()
    + selectTable()
    + orderFood()
    + pay()
}

class Staff{
    + viewOrders()
    + manageOrders()
}

class Waiter extends Staff {
    + CleanTable()
}

class Chef extends Staff {
    + prepareFood()
    + updateOrderStatus()
}

class Admin {
    + Login()
    + UpdateSomethingInDB()
}

class Menu {
    - dishes : List<Dish>
    + GetDishById(dishId) : Dish
    + PrintMenu()
}

class Dish {
    - id
    - name
    - description
    - price
}

class Order {
    - dishes : List<Dish>
    - table : int
    - status : OrderStatus
    + addDish(dish)
    + removeDish(dish)
    + updateStatus(status)
}

class Table {
    - id : int
    - capacity : int
    - isOccupied : bool
    - order : Order
}

Order *-- Dish
Menu *-- Dish
Table *-- Order

@enduml